kyverno/requiteLabels/require-labels.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-labels
spec:
  evaluation:
    mode: "Kubernetes"
  matchConstraints:
    resourceRules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["pods"]
  variables:
    - name: "labels"
      expression: "object.metadata.?labels.orValue([])"
  validations:
    -  message: "Pods must have 'app' and 'version' labels"
       expression: |
         has(variables.labels.app) &&
         has(variables.labels.version)
